fix: update swagger docs and regenerate docs
