# docs/swagger.json
@@ -158,6 +158,15 @@
                     "user"
                 ],
                 "summary": "Get Current User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             },
             "put": {
@@ -173,6 +182,13 @@
                 ],
                 "summary": "Update Current User",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "User Data",
                         "name": "request",
@@ -197,6 +213,15 @@
                     "user"
                 ],
                 "summary": "Delete Current User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -214,6 +239,13 @@
                 ],
                 "summary": "Change Current User Password",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Password Change Data",
                         "name": "request",
